--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,7 @@
 
 .top h4 {
   text-decoration: underline;
-  font-size: 1.05rem;
+  font-size: 1.06rem;
 }
 
 .date {
@@ -62,7 +62,7 @@
   height: 9rem;
   position: absolute;
   background-color: #fafafa;
-  border: 1px solid rgba(0, 0, 0, 0.15);
+  border: 1px solid rgba(0, 0, 0, 0.25);
   z-index: 2;
 }
 
@@ -105,13 +105,14 @@
 
 .asterisk span {
   font-size: 1.25rem;
-  height: 1.6rem;
+  height: 1.625rem;
 }
 
 .number {
   width: 100%;
   display: flex;
   align-items: center;
+  background-color: rgb(175, 175, 175);
 }
 
 .barcode {
@@ -127,16 +128,14 @@
 
 .No {
   margin-right: 2rem;
-  font-weight: 500;
+  font-weight: 600;
   font-family: "Noto Sans SC", sans-serif;
   font-size: 2rem;
 }
 
 .bottom {
   width: 100%;
-  height: auto;
-  background-color: #d7e9ec;
-  background: cover;
+  background-color: rgb(242, 255, 255);
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -144,7 +143,7 @@
 }
 
 .bottom span {
-  font-size: 1.75rem;
+  font-size: 2rem;
   font-weight: 600;
   color: var(--yellow);
   font-family: "Francois One", sans-serif;
