--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@
 
   font-synthesis: none;
   --yellow: #e9e858;
+  --green: #228e4e;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
