--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   margin-top: 2rem;
-  margin-left: 2rem;
+  /* margin-left: 2rem; */
   border: 1px solid black;
   width: 30rem;
   height: auto;
