--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .tag {
   display: flex;
   align-items: center;
-  margin-top: 2rem;
+  margin-bottom: 2rem;
   /* margin-left: 2rem; */
   border: 1px solid black;
   width: 30rem;
